corrected issue with modal overflow

--- a/src/css/modalCard.scss
+++ b/src/css/modalCard.scss
@@ -14,7 +14,6 @@
   margin-left: -10rem; // * NOTE: -10rem = negative half the width of .modal-card-container
   margin-top: -7.5rem; // * NOTE: -7.5rem = negative half the height of .modal-card-container
   width: 20rem;
-  height: 15rem;
 
   .exit-button {
     position: absolute;
